--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,13 +57,14 @@
 
     <Button
         android:id="@+id/button"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="登录"
-        android:layout_below="@+id/editText2"
-        android:layout_alignRight="@+id/editText2"
         android:layout_alignEnd="@+id/editText2"
-        android:layout_marginTop="21dp" />
+        android:layout_alignRight="@+id/editText2"
+        android:layout_below="@+id/editText2"
+        android:layout_marginTop="21dp"
+        android:text="登录" />
 
     <CheckBox
         android:id="@+id/checkBox"
@@ -76,17 +77,3 @@
         android:layout_alignStart="@+id/editText2" />
 
 </RelativeLayout>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:paddingBottom="@dimen/activity_vertical_margin"
-android:paddingLeft="@dimen/activity_horizontal_margin"
-android:paddingRight="@dimen/activity_horizontal_margin"
-android:paddingTop="@dimen/activity_vertical_margin"
-tools:context=".MainActivity" >
-
-
-</RelativeLayout>
-    >
