--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,74 +6,65 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity"
+    android:background="@drawable/loginbackground"
+    >
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_marginTop="100dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize = "44px"
-        android:text="SCCS城市照明智控云系统"
-        android:gravity="center"/>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_marginTop="135dp"
-        android:layout_marginLeft="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize = "36px"
-        android:text="账号"
-        android:gravity="left"/>
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/account"
         android:layout_width="match_parent"
+        android:layout_height="36dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
         android:layout_marginTop="120dp"
-        android:layout_marginLeft="70dp"
-        android:layout_marginRight="20dp"
-        android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:inputType="textPersonName"
+        android:background="@drawable/edittext_login"
+        android:paddingLeft = "20dp"
+        android:hint="请输入用户名"
+        android:singleLine="true"
+        android:textColorHint="#434343"
+        android:fontFamily="helvitica"
+        android:textSize="15dp"
+        android:textColor="#434343" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_marginTop="195dp"
-        android:layout_marginLeft="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize = "36px"
-        android:text="密码"
-        android:gravity="left"/>
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/userpassword"
         android:layout_width="match_parent"
+        android:layout_height="36dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
         android:layout_marginTop="180dp"
-        android:layout_marginLeft="70dp"
-        android:layout_marginRight="20dp"
-        android:layout_height="wrap_content"
+        android:background="@drawable/edittext_login"
         android:ems="10"
-        android:inputType="textPassword" />
-
-    <Button
-        android:id="@+id/button"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/editText2"
-        android:layout_alignRight="@+id/editText2"
-        android:layout_below="@+id/editText2"
-        android:layout_marginTop="21dp"
-        android:text="登录" />
-
+        android:inputType="textPassword"
+        android:paddingLeft = "20dp"
+        android:hint="请输入密码"
+        android:textSize="15dp"
+        android:singleLine="true"
+        android:textColorHint="#434343"
+        android:textColor="#434343" />
     <CheckBox
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
+        android:button="@drawable/checkbox"
         android:text="记住密码"
-        android:layout_alignBottom="@+id/button"
-        android:layout_alignLeft="@+id/editText2"
-        android:layout_alignStart="@+id/editText2" />
+        android:textColor="#FFFFFF"
+        android:layout_centerVertical="true"
+        android:layout_alignStart="@+id/userpassword" />
+    <Button
+        android:id="@+id/button"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:background="@drawable/login_button"
+        android:layout_width="140dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="29dp"
+        android:text="登录"
+        android:layout_below="@+id/checkBox"
+        android:layout_centerHorizontal="true" />
+
+
 
 </RelativeLayout>
