--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,14 +23,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/result_textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:text="这里是查询结果"
-            android:visibility="invisible" />
-
         <Button
             android:id="@+id/button"
             style="@style/Widget.AppCompat.Button.Colored"
@@ -86,6 +78,19 @@
             android:textColor="#434343"
             android:textColorHint="#434343"
             android:textSize="15dp" />
+
+        <TextView
+            android:id="@+id/result_textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/button"
+            android:layout_marginStart="7dp"
+            android:layout_marginTop="25dp"
+            android:padding="16dp"
+            android:text="这里是查询结果"
+            android:textColor="#ffffff"
+            android:visibility="visible" />
     </RelativeLayout>
 
 
