--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,7 @@
             android:layout_centerVertical="true"
             android:button="@drawable/checkbox"
             android:text="记住密码"
+            android:visibility="invisible"
             android:textColor="#FFFFFF" />
 
         <EditText
